Fix alignment and spacing
Adds divs with layout classes as wrappers to the unordered
lists to make alignment across rows work better. Tweaks
spacing to accommodate this and to give sections more
breathing space at mobile view sizes.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_layout-footer.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_layout-footer.scss
@@ -3,3 +3,7 @@
 .gem-c-layout-footer--border {
   border-top: govuk-spacing(2) solid govuk-colour("blue");
 }
+
+.gem-c-layout-footer .govuk-footer__list {
+  padding-bottom: govuk-spacing(7);
+}
